--- a/src/pages/blocks/content.html
+++ b/src/pages/blocks/content.html
@@ -1,4 +1,4 @@
-<div class="content">
+<!-- <div class="content">
     <div class="offerSlide">
         <div class="slide">
             <img src="../../assets/img/slider/image (1).png" alt="">
@@ -13,4 +13,4 @@
                 <img src="../../assets/img/slider/image.png" alt="">
         </div>
     </div>
-</div>
+</div> -->
