--- a/src/pages/blocks/header.html
+++ b/src/pages/blocks/header.html
@@ -1,14 +1,14 @@
 <nav class="navigationWrapper">
     <div class="logo">
-        <a href="">Фетч</a>
+        <a href="" class="logo__text">Фетч</a>
     </div>
     <div class="navigation">
-        <div class = "navSlide firstLink"><a href="">Одежда</a></div>
-        <div class = "navSlide"><a href="">Обувь</a></div>
-        <div class = "navSlide"><a href="">Аксессуары</a></div>
-        <div class = "navSlide"><a href="">Блог</a></div>
-        <div class = "navSlide"><a href="">Магазин</a></div>
-        <div class = "navSlide"><a href="">Доставка и оплата</a></div>
+        <div class = "navLink first"><a href="">Одежда</a></div>
+        <div class = "navLink"><a href="">Обувь</a></div>
+        <div class = "navLink"><a href="">Аксессуары</a></div>
+        <div class = "navLink"><a href="">Блог</a></div>
+        <div class = "navLink"><a href="">Магазин</a></div>
+        <div class = "navLink"><a href="">Доставка&nbsp;и&nbsp;оплата</a></div>
     </div>
     <div class="cart">
         <div class="cart__icon">
