--- a/src/pages/blocks/footer.html
+++ b/src/pages/blocks/footer.html
@@ -1,8 +1,8 @@
 <div class="footerWrapper">
     <div class="footerNav">
-        <div class="footerNav__logo2">
-            Фетч
-        </div>
+            <div class="logo2">
+                    <a href="" class="logo__text">Фетч</a>
+            </div>
         <ul class="footerNav__common">
             <li><a href="">Магазин</a></li>
             <li><a href="">Блог</a></li>
@@ -11,7 +11,7 @@
         <div class="footerNav__contacts">
             <div><a href="mailto:shop@fetch.ru">shop@fetch.ru</a></div>
             <div><a href="tel:+78009121142">8 800 912-11-42</a>
-                <div>Звонок бесплатный</div>
+                <div class="definition">Звонок бесплатный</div>
             </div>
         </div>
         <div class="categories">
@@ -51,7 +51,7 @@
         </div>
         <div class="pageInfo">
             <div class="pageInfo__copywright">
-                Фетч-команда, 2019
+                    &copy;Фетч-команда, 2019
             </div>
             <div class="pageInfo__personalRules">
                 Правила обработки персональных данных
