--- a/src/pages/blocks/content.html
+++ b/src/pages/blocks/content.html
@@ -13,4 +13,92 @@
                 
         </div>
     </div>
+    <div class="discriptonWrapper">
+        <div class="discriptonWrapper__text">
+            Фетч - мультибрендовый магазин модной одежды.
+        </div>
+        <div class="discriptonWrapper__text">
+            Следим за трендами и часто обновляем ассортимент
+        </div>
+        <div class="discriptonWrapper__text">
+            Доставляем по Москве за день, по России за неделю.
+        </div>
+    </div>
+    <div class="categories">
+        <ul class="categoties__group1 group">
+            <li class="group__titles"><a href="">Для мужчин</a></li>
+            <li><a href="">Верхняя одежда</a></li>
+            <li><a href="">Рубашки и поло</a></li>
+            <li><a href="">Трикотаж</a></li>
+            <li><a href="">Брюки и джинсы</a></li>
+            <li><a href="">Бельё и носки</a></li>
+        </ul>
+        <ul class="categoties__group2 group">
+                <li class="group__titles"><a href="">Для женщин</a></li>
+                <li><a href="">Верхняя одежда</a></li>
+                <li><a href="">Рубашки и поло</a></li>
+                <li><a href="">Трикотаж</a></li>
+                <li><a href="">Платья и юбки</a></li>
+                <li><a href="">Бельё и носки</a></li>
+        </ul>
+        <ul class="categoties__group3 group" >
+                <li class="group__titles"><a href="">Обувь</a></li>
+                <li><a href="">Кроссовки и кеды</a></li>
+                <li><a href="">Ботинки</a></li>
+        </ul>
+        <ul class="categoties__group4 group">
+                <li class="group__titles"><a href="">Аксессуары</a></li>
+                <li><a href="">Сумки и рюкзаки</a></li>
+                <li><a href="">Часы</a></li>
+                <li><a href="">Бижутерия</a></li>
+                <li><a href="">Средства ухода</a></li>
+        </ul>
+        <ul class="categoties__group5 group">
+                <li class="group__titles"><a href="">Скидки</a></li>
+                <li><a href="">Летняя распродажа</a></li>
+                <li><a href="">Коллекция 2018</a></li>
+        </ul>
+    </div>
+    <div class="item1">
+        <div>
+            <div class="item1__text">
+                Лукбук, лето 2019
+            </div>
+            <div class="item1__textDescript">
+                    Стильные образы для тёплых деньков
+            </div>
+        </div>
+        <div class="item1__photo1">
+            <img src="../../assets/img/item1.png" alt="">
+        </div>
+    </div>
+    <div class="item2">
+        <div class="item2__text">
+            Выбор редакции: часы
+        </div>
+        <div class="item2__textDescript">
+            ТОП-5 лучших предложений по версии администрации Фетч
+        </div>
+    </div>
+    <div class="item3">
+        <div class="item3__text">
+            Новая коллекция adidas Originals
+        </div>
+        <div class="item3__textDescript">
+            Десять крутейших кроссовок
+        </div>
+        <div class="item3__img">
+        </div>
+    </div>
+    <div class="item4">
+        <div class="item4__text">
+            Предзаказ: Maison Margiela Fusion
+        </div>
+        <div class="item4__textDescript">
+            От 92 000 ₽
+        </div>
+        <div class="item4__img">
+            <!-- <img src="../../assets/img/shoes.png" alt=""> -->
+        </div>
+    </div>
 </div>
