--- a/src/pages/blocks/content.html
+++ b/src/pages/blocks/content.html
@@ -13,6 +13,7 @@
                 
         </div>
     </div>
+    <div class="txt">
     <div class="discriptonWrapper">
         <div class="discriptonWrapper__text">
             Фетч - мультибрендовый магазин модной одежды.
@@ -21,7 +22,7 @@
             Следим за трендами и часто обновляем ассортимент
         </div>
         <div class="discriptonWrapper__text">
-            Доставляем по Москве за день, по России за неделю.
+            Доставляем по Москве за день, по России - за неделю.
         </div>
     </div>
     <div class="categories">
@@ -58,6 +59,7 @@
                 <li><a href="">Летняя распродажа</a></li>
                 <li><a href="">Коллекция 2018</a></li>
         </ul>
+    </div>
     </div>
     <div class="item1">
         <div>
