--- a/src/pages/blocks/footer.html
+++ b/src/pages/blocks/footer.html
@@ -1,5 +1,7 @@
 <div class="footerWrapper">
     <div class="footerNav">
+        <div class="container">
+        <div class="section">
             <div class="logo2">
                     <a href="" class="logo__text">Фетч</a>
             </div>
@@ -48,6 +50,7 @@
                     <li><a href="">Летняя распродажа</a></li>
                     <li><a href="">Коллекция 2018</a></li>
             </ul>
+        </div>
         </div>
         <div class="pageInfo">
             <div class="pageInfo__copywright">
