--- a/src/pages/blocks/header.html
+++ b/src/pages/blocks/header.html
@@ -18,7 +18,7 @@
 
         </div>
         <div class="cart__order">
-            <a href="">Оформить заказ!</a>
+            <a href="">Оформить заказ</a>
         </div>
     </div>
 </nav>
