--- a/src/pages/blocks/content.html
+++ b/src/pages/blocks/content.html
@@ -61,6 +61,8 @@
         </ul>
     </div>
     </div>
+    <div class="item1_2_3wrpaper">
+    <div class="item1_2wrpaper">
     <div class="item1">
         <div>
             <div class="item1__text">
@@ -71,7 +73,7 @@
             </div>
         </div>
         <div class="item1__photo1">
-            <img src="../../assets/img/item1.png" alt="">
+            <img src="../../assets/img/deskitem1.png" alt="">
         </div>
     </div>
     <div class="item2">
@@ -82,6 +84,7 @@
             ТОП-5 лучших предложений по версии администрации Фетч
         </div>
     </div>
+</div>
     <div class="item3">
         <div class="item3__text">
             Новая коллекция adidas Originals
@@ -90,8 +93,10 @@
             Десять крутейших кроссовок
         </div>
         <div class="item3__img">
+            <img src="../../assets/img/deskitem3.png" alt="">
         </div>
     </div>
+</div>
     <div class="item4">
         <div class="item4__text">
             Предзаказ: Maison Margiela Fusion
