--- a/src/pages/blocks/footer.html
+++ b/src/pages/blocks/footer.html
@@ -1,7 +1,7 @@
 <div class="footerWrapper">
     <div class="footerNav">
-        <div class="container">
         <div class="section">
+            <div>
             <div class="logo2">
                     <a href="" class="logo__text">Фетч</a>
             </div>
@@ -15,6 +15,7 @@
             <div><a href="tel:+78009121142">8 800 912-11-42</a>
                 <div class="definition">Звонок бесплатный</div>
             </div>
+        </div>
         </div>
         <div class="categories">
             <ul class="categoties__group1 group">
@@ -63,5 +64,4 @@
                 Разработка и поддержка сайта
             </div>
         </div>
-    </div>
 </div>
