--- a/src/pages/blocks/footer.html
+++ b/src/pages/blocks/footer.html
@@ -6,7 +6,7 @@
                     <a href="" class="logo__text">Фетч</a>
             </div>
         <ul class="footerNav__common">
-            <li><a href="">Магазин</a></li>
+            <li><a href="info.html">Магазин</a></li>
             <li><a href="">Блог</a></li>
             <li><a href="">Доставка и оплата</a></li>
         </ul>
