--- a/src/pages/blocks/header.html
+++ b/src/pages/blocks/header.html
@@ -7,7 +7,7 @@
         <div class = "navLink"><a href="">Обувь</a></div>
         <div class = "navLink"><a href="">Аксессуары</a></div>
         <div class = "navLink"><a href="">Блог</a></div>
-        <div class = "navLink"><a href="">Магазин</a></div>
+        <div class = "navLink"><a href="info.html">Магазин</a></div>
         <div class = "navLink"><a href="">Доставка&nbsp;и&nbsp;оплата</a></div>
     </div>
     <div class="cart">
