--- a/src/pages/blocks/header.html
+++ b/src/pages/blocks/header.html
@@ -3,12 +3,14 @@
         <a href="" class="logo__text">Фетч</a>
     </div>
     <div class="navigation">
+        <div class="navigation__bar">
         <div class = "navLink first"><a href="">Одежда</a></div>
         <div class = "navLink"><a href="">Обувь</a></div>
         <div class = "navLink"><a href="">Аксессуары</a></div>
         <div class = "navLink"><a href="">Блог</a></div>
         <div class = "navLink"><a href="info.html">Магазин</a></div>
         <div class = "navLink"><a href="">Доставка&nbsp;и&nbsp;оплата</a></div>
+        </div>
     </div>
     <div class="cart">
         <div class="cart__icon">
