--- a/src/pages/blocks/cardProduct.html
+++ b/src/pages/blocks/cardProduct.html
@@ -112,7 +112,7 @@
             Вам может быть интересно
         </div>
         <div class="interesting__slider">
-            <div class="itemCard">
+            <div class="itemCardD">
                 <div>
                     <div class="itemCard__img" style="background-image: url(../../assets/img/shoes/1.jpg);"></div>
                     <div class="itemCard__info">
