--- a/src/pages/blocks/header.html
+++ b/src/pages/blocks/header.html
@@ -1,26 +1,27 @@
 <nav class="navigationWrapper">
-    <div class="logo">
-        <a href="" class="logo__text">Фетч</a>
-    </div>
-    <div class="navigation">
-        <div class="navigation__bar">
-        <div class = "navLink first"><a href="">Одежда</a></div>
-        <div class = "navLink"><a href="">Обувь</a></div>
-        <div class = "navLink"><a href="">Аксессуары</a></div>
-        <div class = "navLink"><a href="">Блог</a></div>
-        <div class = "navLink"><a href="info.html">Магазин</a></div>
-        <div class = "navLink"><a href="">Доставка&nbsp;и&nbsp;оплата</a></div>
+    <div class="container">
+        <div class="logo">
+            <a href="index.html" class="logo__text">Фетч</a>
         </div>
-    </div>
-    <div class="cart">
-        <div class="cart__icon">
-            <img src="../../assets/icons/cart.svg" alt="">
+        <div class="navigation">
+            <div class="navigation__bar">
+                <div class = "navLink first"><a href="">Одежда</a></div>
+                <div class = "navLink"><a href="shoes.html">Обувь</a></div>
+                <div class = "navLink"><a href="">Аксессуары</a></div>
+                <div class = "navLink"><a href="">Блог</a></div>
+                <div class = "navLink"><a href="info.html">Магазин</a></div>
+                <div class = "navLink"><a href="">Доставка&nbsp;и&nbsp;оплата</a></div>
+            </div>
         </div>
-        <div class="cart__counter">
-
-        </div>
-        <div class="cart__order">
-            <a href="">Оформить заказ</a>
+        <div class="cart">
+            <div class="cart__icon">
+                <img src="../../assets/icons/cart.svg" alt="">
+            </div>
+            <div class="cart__counter">
+            </div>
+            <div class="cart__order">
+                <a href="checkout.html">Оформить&nbsp;заказ</a>
+            </div>
         </div>
     </div>
 </nav>
